--- a/src/views/payment.complete.view/templates/payment.complete.mustache.html
+++ b/src/views/payment.complete.view/templates/payment.complete.mustache.html
@@ -1,3 +1,3 @@
 <div id="paymentCompleteView" class="stellar_checkout_payment_complete stellar_checkout_hidden">
-	<div class="stellar_checkout_message">Payment complete</div>
+	<div id="paymentCompleteMessage" class="stellar_checkout_message">Payment complete</div>
 </div>
