--- a/src/views/payment.awaiting.view/templates/payment.awaiting.mustache.html
+++ b/src/views/payment.awaiting.view/templates/payment.awaiting.mustache.html
@@ -30,7 +30,7 @@
 		<div class="stellar_checkout_txtwrap stellar_checkout_txtwrap--picker">
 			<select id="walletPicker" class="stellar_checkout_picker">
 				<option value="envelopexdr">XDR</option>
-				<option value="destinationkey">Destination Public Key</option>
+				<option value="destinationkey">Public Key</option>
 				<option value="stargazer">Stargazer Wallet</option>
 			</select>
 		</div>
