various styling. dead code cleanup

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -35,7 +35,7 @@ $font-size-smallest: .7rem;
 // Borders
 $border-radius: .4rem;
 $border-radius-halved: .2rem;
-$layout-border-color: #eee;
+$layout-border-color: #ddd;
 $layout-border-stroke: solid;
 $layout-border-width: .0625rem;
 $layout-border: $layout-border-width $layout-border-stroke $layout-border-color;
