--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -5,9 +5,9 @@
     position: relative;
     font-family: monospace, monospace;
     float: left;
-    // padding: $padding-halved;
     width: 100%;
     height: 100%;
+    text-align: left
 }
 
 .sco *, .sco *:before, .sco *:after {
