added opts / settings to toggle component visibility

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -27,6 +27,8 @@ $button-blue: #08b5e5;
     }
 }
 
+.sco input[type=submit]:disabled,
+.sco input[type=button]:disabled,
 .sco button[disabled],
 .sco button:disabled {
     opacity: 0.5;
