- added a spinner to transaction status, resolved a few more minor bugs

--- a/src/sass/component/_component.scss
+++ b/src/sass/component/_component.scss
@@ -68,7 +68,7 @@ $green: #3ba776;
         text-align: left;
         text-transform: uppercase;
 
-        .sco_spinner {
+        .sco_spinner, .spinner {
             padding: 0 $padding-halved;
             text-decoration: center;
             width: 2.4rem;
