- updated store options and transaction

--- a/src/sass/component/_component.scss
+++ b/src/sass/component/_component.scss
@@ -135,6 +135,7 @@ $green: #3ba776;
         &_row {
             border-bottom: $layout-border;
             display: flex;
+            font-size: $font-size-small;
             padding: $padding;
             text-transform: uppercase;
             &--meta {
