--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -2,9 +2,11 @@
 
 .stellar_checkout, .sco {
     box-sizing: border-box;
+    display: grid;
+    grid-row-columns: auto;
     position: relative;
     font-family: monospace, monospace;
-    float: left;
+    // float: left;
     width: 100%;
     height: 100%;
     text-align: left
@@ -12,26 +14,3 @@
 
 .sco *, .sco *:before, .sco *:after {
     box-sizing: inherit; }
-
-
-/* OVERLAYS */
-
-.sco_overlay {
-    background-image: url('../assets/i/stellar-rocket@2x.png');
-    background-position-x: 50%;
-    background-position-y: 50%;
-    background-size: 50%;
-    background-repeat: no-repeat;
-    background-color: #fff;
-    height: 100%;
-    position: absolute;
-    transition: .4s;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-}
-
-.sco_overlay.sco_loaded {
-    opacity: 0;
-    transform: scale3d(0, 0, 0);
-}
