--- a/src/sass/layout/_container.scss
+++ b/src/sass/layout/_container.scss
@@ -3,10 +3,9 @@
 .stellar_checkout, .sco {
     box-sizing: border-box;
     display: grid;
-    grid-row-columns: auto;
+    grid-template-columns: auto;
     position: relative;
     font-family: monospace, monospace;
-    // float: left;
     width: 100%;
     height: 100%;
     text-align: left
