- changed cursor to pointer

--- a/src/sass/component/_component.scss
+++ b/src/sass/component/_component.scss
@@ -208,6 +208,7 @@ $green: #3ba776;
             text-align: center;
         }
         a {
+            cursor: pointer;
             text-decoration: none;
             &:first-child {
                 border-left: 0;
